--- a/project.yaml
+++ b/project.yaml
@@ -40,5 +40,5 @@ spec:
       state: created
   conda: ''
   source: git://github.com/alonmr/mlrun-project.git#refs/heads/master
-  origin_url: git://github.com/alonmr/mlrun-project.git#master
+  origin_url: git://github.com/alonmr/mlrun-project.git#refs/heads/master
   desired_state: online
